--- a/redocly.yaml
+++ b/redocly.yaml
@@ -1,6 +1,6 @@
 # See https://redocly.com/docs/cli/configuration/ for more information.
 apis:
-  autheus@v1: 
+  nifli@v1: 
     root: openapi/openapi.yaml
 extends:
   - recommended
